# Reversi

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ComputerPlayer.cpp  ComputerPlayer.h  ConsolePrinter.cpp  ConsolePrinter.h  Coordinate.cpp  Coordinate.h  GameManager.cpp  GameManager.h  HumanPlayer.cpp  HumanPlayer.h  Logic.cpp  Logic.h  NormalLogic.cpp  NormalLogic.h  Player.cpp  Player.h  Printer.cpp  Printer.h  main.cpp  makefile
include/: Board.h  Cell.h  ComputerPlayer.h  ConsolePrinter.h  Coordinate.h  HumanPlayer.h  Logic.h  NormalLogic.h  Printer.h
src/: Board.cpp  Board.h  Cell.cpp  Cell.h  ComputerPlayer.cpp  ComputerPlayer.h  ConsolePrinter.cpp  Coordinate.cpp  Coordinate.h  GameManager.cpp  HumanPlayer.cpp  HumanPlayer.h  Logic.cpp  NormalLogic.cpp  NormalLogic.h  Player.cpp  Player.h  main.cpp
src/client/include/: Coordinate.h  GameManager.h
src/client/srcReversi/: Board.cpp  Coordinate.cpp
tests/: BoardTest.h  ComputerTest.h  LogicTest.h  test_Board.cpp  test_ComputerPlayer.cpp  test_Coordinate.cpp  test_NormalLogic.cpp
